# briancohan

./: README.md  justfile  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/briancohan/: __init__.py  config.py
src/briancohan/static/css/: style.css
src/briancohan/templates/: about.html  base.html  index.html  layout.html
src/briancohan/templates/components/: site_nav.html
